--- a/pico_w/access_point/CMakeLists.txt
+++ b/pico_w/access_point/CMakeLists.txt
@@ -1,12 +1,14 @@
 add_executable(picow_access_point_background
         picow_access_point.c
         dhcpserver/dhcpserver.c
+        dnsserver/dnsserver.c
         )
 
 target_include_directories(picow_access_point_background PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}
         ${CMAKE_CURRENT_LIST_DIR}/.. # for our common lwipopts
         ${CMAKE_CURRENT_LIST_DIR}/dhcpserver
+        ${CMAKE_CURRENT_LIST_DIR}/dnsserver
         )
 
 target_link_libraries(picow_access_point_background
@@ -19,11 +21,13 @@ pico_add_extra_outputs(picow_access_point_background)
 add_executable(picow_access_point_poll
         picow_access_point.c
         dhcpserver/dhcpserver.c
+        dnsserver/dnsserver.c
         )
 target_include_directories(picow_access_point_poll PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}
         ${CMAKE_CURRENT_LIST_DIR}/.. # for our common lwipopts
         ${CMAKE_CURRENT_LIST_DIR}/dhcpserver
+        ${CMAKE_CURRENT_LIST_DIR}/dnsserver
         )
 target_link_libraries(picow_access_point_poll
         pico_cyw43_arch_lwip_poll
@@ -31,3 +35,5 @@ target_link_libraries(picow_access_point_poll
         )
 pico_add_extra_outputs(picow_access_point_poll)
 
+# Some test code for the dns server
+add_subdirectory(dnsserver)
