Add support for serial USB after waking from sleep -- unstable

--- a/sleep/CMakeLists.txt
+++ b/sleep/CMakeLists.txt
@@ -1,5 +1,6 @@
 if (NOT PICO_NO_HARDWARE)
     add_subdirectory(hello_dormant)
-    add_subdirectory(hello_sleep)
     add_subdirectory(hello_dormant_rtc)
+    add_subdirectory(hello_sleep)
+    add_subdirectory(hello_sleep_usb)
 endif ()
