--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ add_subdirectory(pwm)
 add_subdirectory(reset)
 add_subdirectory(rtc)
 add_subdirectory(spi)
+add_subdirectory(sleep)
 add_subdirectory(system)
 add_subdirectory(timer)
 add_subdirectory(uart)
