Add temperature sensor example and minor improvements to hello_sleep_usb

--- a/sleep/CMakeLists.txt
+++ b/sleep/CMakeLists.txt
@@ -3,4 +3,5 @@ if (NOT PICO_NO_HARDWARE)
     add_subdirectory(hello_dormant_rtc)
     add_subdirectory(hello_sleep)
     add_subdirectory(hello_sleep_usb)
+    add_subdirectory(sleep_temperature_sensor)
 endif ()
