Add an example of using using DMA with PIO
Fixes #467

--- a/pio/CMakeLists.txt
+++ b/pio/CMakeLists.txt
@@ -19,4 +19,5 @@ if (NOT PICO_NO_HARDWARE)
     add_subdirectory(uart_rx)
     add_subdirectory(uart_tx)
     add_subdirectory(ws2812)
+    add_subdirectory(uart_pio_dma)
 endif ()
