Add a couple of simple powman examples
powman_timer: Repeatedly switches the device off for 5s
powman_gpio: Repeatedly switches the device off until a GPIO goes high

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ add_subdirectory(otp)
 add_subdirectory(picoboard)
 add_subdirectory(pico_w)
 add_subdirectory(pio)
+add_subdirectory(powman)
 add_subdirectory(pwm)
 add_subdirectory(reset)
 add_subdirectory(rtc)
