--- a/sleep/hello_sleep/CMakeLists.txt
+++ b/sleep/hello_sleep/CMakeLists.txt
@@ -1,8 +1,17 @@
-add_executable(hello_sleep
-        hello_sleep.c
+add_executable(hello_sleep_rtc
+        hello_sleep_rtc.c
         )
+target_link_libraries(hello_sleep_rtc
+        pico_stdlib
+        hardware_sleep
+        )
+pico_add_extra_outputs(hello_sleep_rtc)
 
-target_link_libraries(hello_sleep pico_stdlib hardware_sleep)
-
-# create map/bin/hex file etc.
-pico_add_extra_outputs(hello_sleep)
+add_executable(hello_sleep_alarm
+        hello_sleep_alarm.c
+        )
+target_link_libraries(hello_sleep_alarm
+        pico_stdlib
+        hardware_sleep
+        )
+pico_add_extra_outputs(hello_sleep_alarm)
