Add power saving changes
Reproduces sleep power numbers of ~0.148mA

--- a/powman/powman_timer/CMakeLists.txt
+++ b/powman/powman_timer/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(powman_timer
 target_link_libraries(powman_timer PRIVATE
         pico_stdlib
         powman_example
+        hardware_adc
 )
 
 # create map/bin/hex file etc.
@@ -11,3 +12,7 @@ pico_add_extra_outputs(powman_timer)
 
 # add url via pico_set_program_url
 example_auto_set_url(powman_timer)
+
+# We are initialising USB so we use less power when we go to sleep!
+pico_enable_stdio_usb(powman_timer 1)
+pico_enable_stdio_uart(powman_timer 1)
