Make led flash in gatt_counter example
This is the most useful example to check BT is working. So make the led
flash to indicate it's doing something.

--- a/pico_w/bt/gatt_counter/CMakeLists.txt
+++ b/pico_w/bt/gatt_counter/CMakeLists.txt
@@ -1,1 +1,5 @@
-picow_bt_example(gatt_counter)
+add_library(gatt_counter_led INTERFACE)
+target_compile_definitions(gatt_counter_led INTERFACE
+    LED_BLINK=1
+    )
+picow_bt_example(gatt_counter gatt_counter_led)
